@@ -68,6 +68,7 @@
 #include <wx/stattext.h>
 #include <wx/dirctrl.h>
 #include <wx/spinctrl.h>
+#include <wx/paper.h>
 
 #include "cpp/wxapi.h"
 #include "cpp/setup.h"
@@ -3118,6 +3119,7 @@ void SetConstantsOnce()
     wxPli_make_const( "wxFormatInvalid" );      // dnd
     wxPli_make_const( "wxDefaultPosition" );    // misc
     wxPli_make_const( "wxDefaultSize" );        // misc
+    wxPli_make_const( "wxThePrintPaperDatabase" );  // print
 
 #if WXPERL_W_VERSION_GE( 2, 7, 2 )
     wxPli_make_const( "wxNullAnimation" );      // animation
@@ -3373,6 +3375,14 @@ void SetConstants()
 
     tmp = get_sv( "Wx::wxTheClipboard", 1 );
     sv_setref_pv( tmp, "Wx::Clipboard", wxTheClipboard );
+    
+    //
+    // Printing
+    //
+    
+    tmp = get_sv( "Wx::wxThePrintPaperDatabase", 1 );
+    sv_setref_pv( tmp, "Wx::PrintPaperDatabase", wxThePrintPaperDatabase );
+    
 }
 
 WXPLI_BOOT_ONCE(Wx_Const);
@@ -3405,6 +3415,11 @@ UnsetConstants()
     tmp = get_sv( "Wx::wxDefaultValidator", 1 );
     if( tmp && SvROK( tmp ) )
         sv_setiv( SvRV( tmp ), 0 );
+    
+    tmp = get_sv( "Wx::wxThePrintPaperDatabase", 1 );
+    if( tmp && SvROK( tmp ) )
+        sv_setiv( SvRV( tmp ), 0 );
+
 
 void
 SetEvents()
